fixed color bug and sorting bug on IE, added click support on mobile devices

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -97,6 +97,11 @@ body {
     margin:auto;
 }
 
+.content-panel{
+    margin: 10px;
+}
+
+
 .loading-icon{
     width: 40px;
     height: 40px;
